# bgfx_cpp_cmake_minimal_startup

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
asset/: common
asset/shader/: compile_shader.sh  cs_update.sc  fs_bump.sc
asset/sprite/: compile_sprite.sh
include/: Game.h
src/: Game.cc
